--- a/src/LarpManager/Views/groupe/fragment/form.twig
+++ b/src/LarpManager/Views/groupe/fragment/form.twig
@@ -8,7 +8,7 @@
 			<div class="panel-body">
 				{{ form_row(form.nom) }}
 				{{ form_row(form.description) }}
-				{{ form_row(form.region) }}
+				{{ form_row(form.territoire) }}
 			</div>
 		</div>
 		
