--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -55,7 +55,7 @@
 				
 				<div class="list-group-item">
   					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('territoire.update', {index : langue.id}) }}">Modifier</a>
+  						<a  class="btn btn-primary" role="button" href="{{ path('langue.update', {index : langue.id}) }}">Modifier</a>
 					</div>
   				</div>
 			</div>
