--- a/src/LarpManager/Views/ressource/index.twig
+++ b/src/LarpManager/Views/ressource/index.twig
@@ -4,21 +4,18 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des ressources
-	<small>
-		( {{ ressources|length }} ressources )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des ressources.</h3>
+			<div class="well well-sm">
+				<h4>
+					Gestion des ressources
+					<small>
+						( {{ ressources|length }} ressources )
+					</small>
+				</h4>
+			</div>
+			
 			{{ include("ressource/fragment/list.twig", {'ressources' : ressources, 'add' : true}) }}
 		</div>
 	</div>
