--- a/src/LarpManager/Views/ressource/update.twig
+++ b/src/LarpManager/Views/ressource/update.twig
@@ -6,14 +6,13 @@
 
 	<a href="{{ path("niveau") }}">Retour à la liste des ressources</a>
 	
-	<div class="page-header">
-		<h1>Modification de {{ ressource.label }}</h1>
-	</div>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("ressource/fragment/form.twig",{'action': path('ressource.update',{'index': ressource.id}), 'form' : form}) }}
+				{{ include("ressource/fragment/form.twig",{
+					'legend': 'Modification d\'une ressource',
+					'action': path('ressource.update',{'index': ressource.id}),
+					'form' : form}) }}
 			</div>
 		</div>
 	</div>
