--- a/src/LarpManager/Views/territoire/detail.twig
+++ b/src/LarpManager/Views/territoire/detail.twig
@@ -33,9 +33,9 @@
 	    			<h4 class="list-group-item-heading">Informations politiques</h4>
 	    			<p class="list-group-item-text">
 	    				<ul>
-	    					<li>Capitale : {{ territoire.capitale|default('Aucune') }}</li>
-	    					<li>Système politique : {{ territoire.politique|default('Inconnu') }}</li>
-	    					<li>Dirigeant : {{ territoire.dirigeant|default('Aucun') }}</li>
+	    					<li><strong>Capitale : </strong>{{ territoire.capitale|default('Aucune') }}</li>
+	    					<li><strong>Système politique : </strong>{{ territoire.politique|default('Inconnu') }}</li>
+	    					<li><strong>Dirigeant : </strong>{{ territoire.dirigeant|default('Aucun') }}</li>
 	    				</ul>
 	    			</p>
 	    		</div>
@@ -44,20 +44,30 @@
 	    			<h4 class="list-group-item-heading">Autres informations</h4>
 	    			<p class="list-group-item-text">
 	    				<ul>
-	    					<li>Population : {{ territoire.population|default('Inconnue') }}</li>
-	    					<li>Symbole : {{ territoire.symbole|default('Aucun') }}</li>
-	    					<li>Niveau technologique : {{ territoire.techLevel|default('Aucun') }}</li>
-	    					<li>Langues parlée : {{ territoire.langues|join(', ') }}</li>
-	    					<li>Langue principale : {{ territoire.langue }}</li> 
+	    					<li><strong>Population : </strong>{{ territoire.population|default('Inconnue') }}</li>
+	    					<li><strong>Symbole : </strong>{{ territoire.symbole|default('Aucun') }}</li>
+	    					<li><strong>Niveau technologique : </strong>{{ territoire.techLevel|default('Aucun') }}</li>
+	    					<li><strong>Langues parlée : </strong>{{ territoire.langues|join(', ') }}</li>
+	    					<li><strong>Langue principale : </strong>{{ territoire.langue }}</li> 
 	    				</ul>
 	    			</p>
 	    		</div>
+	    		
+	    		<div class="list-group-item">
+	    			<h4 class="list-group-item-heading">Economie</h4>
+    				<p class="list-group-item-text">
+    					<ul>
+    						<li><strong>Importations : </strong>{% if territoire.importations|length > 0 %}{{ territoire.importations|join(', ') }}{% else %}Rien{% endif %}</li>
+    						<li><strong>Exportations : </strong>{% if territoire.exportations|length > 0 %}{{ territoire.exportations|join(', ') }}{% else %}Rien{% endif %}</li>
+    					</ul>
+    				</p>
+    			</div>
 	    		
 	    		{% if territoire.territoire %}	
 	    		<div class="list-group-item">
 		    		<h4 class="list-group-item-heading">Ce territoire dépend de</h4>
     				<p class="list-group-item-text">
-    					{{ territoire.territoire.nom }}
+    					<a href="{{ path('territoire.detail',{'index': territoire.territoire.id}) }}">{{ territoire.territoire.nom }}</a>
     				</p>
     			</div>
     			{% endif %}
