--- a/src/LarpManager/Views/age/detail.twig
+++ b/src/LarpManager/Views/age/detail.twig
@@ -3,29 +3,31 @@
 {% block title %}Ages{% endblock title %}
 
 {% block content %}
-
-<a href="{{ path("age") }}">Retour à la liste des ages</a>
-
-<div class="page-header">
-	<h1>Détail de {{ age.label }}</h1>
-</div>
 	
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-8">
+		
+			<a href="{{ path("age") }}">Retour à la liste des ages</a>
+			<div class="well well-sm bs-component">
+				<h4>
+					{{ age.label }}
+				</h4>
+			</div>
 			
-			<div class="panel panel-primary">
-  				<div class="panel-heading">
-  					{{ age.label }}				
-  				</div>
-  				<div class="panel-body">
-    				<p>{{ age.description }}</p>
-  				</div>
-  				<div class="panel-footer">
-  					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('age.update', {index : age.id}) }}">Modifier</a>
-					</div>
-  				</div>
+  			<div class="list-group">
+		    		
+		    	<div class="list-group-item">
+			    	<h4 class="list-group-item-heading">Description</h4>
+	    			<p class="list-group-item-text">
+	    			{% if not age.description %}
+    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+    					Attention, cet age n'a pas de description.
+    				{% else %}
+    					{{ age.description }}
+    				{% endif %}
+    				</p>
+	    		</div>
 			</div>
 		</div>
 	</div>
