--- a/src/LarpManager/Views/genre/fragment/list.twig
+++ b/src/LarpManager/Views/genre/fragment/list.twig
@@ -9,19 +9,18 @@
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
 			{{ genre.label }}
-		</h4>
-		<p class="list-group-item-text">
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('genre.detail', {index: genre.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('genre.update', {index: genre.id}) }}" class="btn btn-default" role="button">Modifier</a>
 			</div>
-		
-		</p>	
+		</h4>
+			
 		{% if genre.description %}
-			<p class="list-group-item-text text-info">{{ genre.description }}</p>
+			<p class="list-group-item-text text-default">{{ genre.description }}</p>
 		{% else %}
 			<p class="list-group-item-text text-warning">Attention, ce genre n'a pas description</p>
 		{%  endif %}
+		
 		
 	</li>
 	{%  endfor %}
