--- a/src/LarpManager/Views/groupe/fragment/form.twig
+++ b/src/LarpManager/Views/groupe/fragment/form.twig
@@ -1,4 +1,7 @@
+<div class="well bs-component">
 <form action="{{ action }}" method="POST" {{ form_enctype(form) }}>
+	<fieldset>
+		<legend>{{ legend }}</legend>
 		{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 		
 		<div class="panel panel-default">
@@ -67,4 +70,6 @@
 		</div>
 		
 		{{ form_rest(form) }}
+	</fieldset>
 </form>
+</div>
