--- a/src/LarpManager/Views/homepage/fragment/groupe.twig
+++ b/src/LarpManager/Views/homepage/fragment/groupe.twig
@@ -3,8 +3,8 @@
 		{{ groupe.nom }}
 	</div>
 	<div class="panel-body">
-		<p>Pays : {{ groupe.region.pays.nom }}</p>
-   		<p>Fief : {{ groupe.region.nom }}</p>
+		<p>Territoire : {{ groupe.territoire.nom }}</p>
+		<p>Composition : {{ groupe.personnages|length }} personages</p>
    	</div>
    	<ul class="list-group">
    		<li class="list-group-item">
