--- a/src/LarpManager/Views/age/fragment/list.twig
+++ b/src/LarpManager/Views/age/fragment/list.twig
@@ -9,16 +9,15 @@
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
 			{{ age.label }}
-		</h4>
-		<p class="list-group-item-text">
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('age.detail', {index: age.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('age.update', {index: age.id}) }}" class="btn btn-default" role="button">Modifier</a>
 			</div>
-		
+		</h4>
+		<p class="list-group-item-text">		
 		</p>	
 		{% if age.description %}
-			<p class="list-group-item-text text-info">{{ age.description }}</p>
+			<p class="list-group-item-text text-default">{{ age.description }}</p>
 		{% else %}
 			<p class="list-group-item-text text-warning">Attention, cet age n'a pas description</p>
 		{%  endif %}
