--- a/src/LarpManager/Views/age/index.twig
+++ b/src/LarpManager/Views/age/index.twig
@@ -4,21 +4,17 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des ages
-	<small>
-		( {{ ages|length }} ages )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des ages.</h3>
+			<div class="well well-sm">
+				<h4>
+					Gestion des ages
+					<small>
+						( {{ ages|length }} ages )
+					</small>
+				</h4>
+			</div>
 			{{ include("age/fragment/list.twig", {'ages' : ages, 'add' : true}) }}
 		</div>
 	</div>
