--- a/src/LarpManager/Views/age/update.twig
+++ b/src/LarpManager/Views/age/update.twig
@@ -4,16 +4,16 @@
 
 {% block content %}
 
-	<a href="{{ path("age") }}">Retour à la liste des ages</a>
 	
-	<div class="page-header">
-		<h1>Modification de {{  age.label }}</h1>
-	</div>
-
+	
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("age/fragment/form.twig",{'action': path('age.update',{'index':age.id}), 'form' : form}) }}
+				<a href="{{ path("age") }}">Retour à la liste des ages</a>
+				{{ include("age/fragment/form.twig",{
+					'legend': 'Modification d\'un age',
+					'action': path('age.update',{'index':age.id}),
+					'form' : form}) }}
 			</div>
 		</div>
 	</div>
