--- a/src/LarpManager/Views/classe/index.twig
+++ b/src/LarpManager/Views/classe/index.twig
@@ -4,21 +4,17 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des classes
-	<small>
-		( {{ classes|length }} classes )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des classes.</h3>
+			<div class="well well-sm">
+				<h4>
+					Gestion des classes
+					<small>
+						( {{ classes|length }} classes )
+					</small>
+				</h4>
+			</div>
 			{{ include("classe/fragment/list.twig", {'classes' : classes, 'add' : true}) }}
 		</div>
 	</div>
