--- a/src/LarpManager/Views/competence/fragment/list.twig
+++ b/src/LarpManager/Views/competence/fragment/list.twig
@@ -9,23 +9,24 @@
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
 			{{ competence.nom }}
-		</h4>
-		<p class="list-group-item-text">
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('competence.detail', {index: competence.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('competence.update', {index: competence.id}) }}" class="btn btn-default" role="button">Modifier</a>
 			</div>
-		
-		</p>	
-			{% if competence.description %}
-				<p class="list-group-item-text text-info">{{ competence.description }}</p>
-			{% else %}
-				<p class="list-group-item-text text-warning">Attention, cette compétence n'a pas description</p>
-			{%  endif %}
-		
+		</h4>
+	
+		{% if competence.description %}
+			<p class="list-group-item-text text-default">{{ competence.description }}</p>
+		{% else %}
+			<p class="list-group-item-text text-warning">Attention, cette compétence n'a pas description</p>
+		{%  endif %}
 		
 		<p class="list-group-item-text">
-			<small>Créé par {{ competence.creator.username }} le {{ competence.creationDate|date('Y-m-d H:i:s') }}. Dernière mise à jour le {{ competence.updateDate|date('Y-m-d H:i:s') }}</small>
+		{% if competence.niveaux|length > 0 %}
+			Niveaux définis :{{ competence.niveaux|join(', ') }}
+		{% else %}
+			<span class="text-warning">Attention, aucun niveau n'est défini !</span>
+		{% endif %}
 		</p>
 		
 	</li>
