--- a/src/LarpManager/Views/competence/index.twig
+++ b/src/LarpManager/Views/competence/index.twig
@@ -4,25 +4,20 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des compétences
-	<small>
-		( {{ competences|length }} compétences )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des compétences.</h3>
+				<div class="well well-sm">
+				<h4>
+					Gestion des compétences
+					<small>
+						( {{ competences|length }} competences )
+					</small>
+				</h4>
+			</div>
 			{{ include("competence/fragment/list.twig", {'competences' : competences, 'add' : true}) }}
 		</div>
 	</div>
-
 </div>
 	
 {% endblock %}
