--- a/src/LarpManager/Views/genre/detail.twig
+++ b/src/LarpManager/Views/genre/detail.twig
@@ -4,24 +4,33 @@
 
 {% block content %}
 
-<a href="{{ path("genre") }}">Retour à la liste des genres</a>
-
-<div class="page-header">
-	<h1>Détail de {{ genre.label }}</h1>
-</div>
-	
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-8">
+		
+			<a href="{{ path("genre") }}">Retour à la liste des genres</a>
+						
+			<div class="well well-sm bs-component">
+				<h4>
+					{{ genre.label }}
+				</h4>
+			</div>
 			
-			<div class="panel panel-primary">
-  				<div class="panel-heading">
-  					{{genre.label }}				
-  				</div>
-  				<div class="panel-body">
-    				<p>{{ genre.description }}</p>
-  				</div>
-  				<div class="panel-footer">
+			<div class="list-group">
+		    		
+		    	<div class="list-group-item">
+			    	<h4 class="list-group-item-heading">Description</h4>
+	    			<p class="list-group-item-text">
+	    			{% if not genre.description %}
+    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+    					Attention, ce genre n'a pas de description.
+    				{% else %}
+    					{{ genre.description }}
+    				{% endif %}
+    				</p>
+	    		</div>
+	    		
+	    		<div class="list-group-item">
   					<div class="btn-group" role="group" aria-label="...">
   						<a  class="btn btn-primary" role="button" href="{{ path('genre.update', {index : genre.id}) }}">Modifier</a>
 					</div>
