--- a/src/LarpManager/Views/genre/index.twig
+++ b/src/LarpManager/Views/genre/index.twig
@@ -4,21 +4,17 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des genres
-	<small>
-		( {{ genres|length }} genres )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des genres.</h3>
+				<div class="well well-sm">
+				<h4>
+					Gestion des genres
+					<small>
+						( {{ genres|length }} genres )
+					</small>
+				</h4>
+			</div>
 			{{ include("genre/fragment/list.twig", {'genres' : genres, 'add' : true}) }}
 		</div>
 	</div>
