--- a/src/LarpManager/Views/genre/update.twig
+++ b/src/LarpManager/Views/genre/update.twig
@@ -4,16 +4,16 @@
 
 {% block content %}
 
-	<a href="{{ path("genre") }}">Retour à la liste des genres</a>
 	
-	<div class="page-header">
-		<h1>Modification de {{ genre.label }}</h1>
-	</div>
-
+	
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("genre/fragment/form.twig",{'action': path('genree.update',{'index':genre.id}), 'form' : form}) }}
+				<a href="{{ path("genre") }}">Retour à la liste des genres</a>
+				{{ include("genre/fragment/form.twig",{
+					'legend': 'Modification d\'un genre',
+					'action': path('genre.update',{'index':genre.id}), 
+					'form' : form}) }}
 			</div>
 		</div>
 	</div>
