--- a/src/LarpManager/Views/groupe/add.twig
+++ b/src/LarpManager/Views/groupe/add.twig
@@ -4,14 +4,13 @@
 
 {% block content %}
 
-	<div class="page-header">
-		<h1>Ajout d'un groupe</h1>
-	</div>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("groupe/fragment/form.twig",{'action': path('groupe.add'), 'form' : form}) }}
+				{{ include("groupe/fragment/form.twig",{
+					'legend': 'Ajout d\'un groupe',
+					'action': path('groupe.add'),
+					'form' : form}) }}
 			</div>
 		</div>
 	</div>
