--- a/src/LarpManager/Views/groupe/index.twig
+++ b/src/LarpManager/Views/groupe/index.twig
@@ -4,17 +4,11 @@
 
 {% block content %}
 
-	<div class="page-header">
-		<h1>
-			Liste des groupes
-		</h1>
-	</div>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
 			
-				{% if last_add|length == 0 %}
+				{% if groupes|length == 0 %}
 					<div class="panel panel-warning">
 						<div class="panel-heading">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -23,7 +17,7 @@
 						
 		  				<div class="panel-body">
 							<ul>
-								{% if last_add|length == 0 %}
+								{% if groupes|length == 0 %}
 									<li>Attention, aucun groupe n'est défini.</li>
 								{%  endif %}
 							</ul>
@@ -33,8 +27,15 @@
 			</div>
 
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des groupes.</h3>
-			{{ include("groupe/fragment/list.twig", {'groupes' : last_add, 'add' : true}) }}
+			<div class="well well-sm">
+				<h4>
+					Gestion des groupes
+					<small>
+						( {{ groupes|length }} groupes )
+					</small>
+				</h4>
+			</div>
+			{{ include("groupe/fragment/list.twig", {'groupes' : groupes, 'add' : true}) }}
 		</div>
 	</div>
 </div>
