--- a/src/LarpManager/Views/niveau/index.twig
+++ b/src/LarpManager/Views/niveau/index.twig
@@ -4,21 +4,17 @@
 
 {% block content %}
 
-<div class="page-header">
-<h1>
-	Gestion des niveaux
-	<small>
-		( {{ niveaux|length }} niveaux )
-	</small>
-</h1>
-</div>
-
 <div class="container-fluid">
-
 	<div class="row">
-
 		<div class="col-xs-12 col-md-12">
-			<h3>Liste des niveaux.</h3>
+			<div class="well well-sm">
+				<h4>
+					Gestion des niveaux
+					<small>
+						( {{ niveaux|length }} niveaux )
+					</small>
+				</h4>
+			</div>
 			{{ include("niveau/fragment/list.twig", {'niveaux' : niveaux, 'add' : true}) }}
 		</div>
 	</div>
