--- a/src/LarpManager/Views/niveau/update.twig
+++ b/src/LarpManager/Views/niveau/update.twig
@@ -4,16 +4,15 @@
 
 {% block content %}
 
-	<a href="{{ path("niveau") }}">Retour à la liste des niveaux</a>
 	
-	<div class="page-header">
-		<h1>Modification de {{ niveau.label }}</h1>
-	</div>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("niveau/fragment/form.twig",{'action': path('niveau.update',{'index': niveau.id}), 'form' : form}) }}
+				<a href="{{ path("niveau") }}">Retour à la liste des niveaux</a>
+				{{ include("niveau/fragment/form.twig",{
+					'legend': 'Modification d\'un niveau',
+					'action': path('niveau.update',{'index': niveau.id}), 
+					'form' : form}) }}
 			</div>
 		</div>
 	</div>
