--- a/src/LarpManager/Views/groupe/index.twig
+++ b/src/LarpManager/Views/groupe/index.twig
@@ -6,8 +6,8 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-md-12">
-			
+		
+			<div class="col-xs-12 col-md-12">	
 				{% if groupes|length == 0 %}
 					<div class="panel panel-warning">
 						<div class="panel-heading">
@@ -35,6 +35,15 @@
 					</small>
 				</h4>
 			</div>
+			
+			{% if is_granted('ROLE_ADMIN', app.user) %}
+			<ul class="list-group">
+				<a href="{{ path('groupe.place') }}" class="list-group-item active">
+					<span class="badge"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></span>
+					<h4 class="list-group-item-heading">Modifier les places disponibles</h4>
+				</a>
+			</ul>
+			{% endif %}
 			{{ include("groupe/fragment/list.twig", {'groupes' : groupes, 'add' : true}) }}
 		</div>
 	</div>
